--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-segment-security.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-segment-security.cfg
@@ -30,8 +30,8 @@ router segment-security
             from MATCH-LIST22 policy POLICY-TEST1
       segment SEGMENT-TEST2
          definition
+            match prefix-ipv4 MATCH-LIST4
             match prefix-ipv6 MATCH-LIST3
-            match covered prefix-list ipv4 MATCH-LIST4
          !
          policies
             from MATCH-LIST20 policy policy-forward-all
@@ -43,8 +43,8 @@ router segment-security
          definition
             match interface Ethernet1
             match interface Ethernet2
-            match prefix-ipv6 MATCH-LIST1
-            match prefix-ipv4 MATCH-LIST10
+            match covered prefix-list ipv4 PREFIX-LIST10
+            match covered prefix-list ipv6 PREFIX-LIST1
          !
          policies
             from MATCH-LIST20 policy policy-forward-all
