--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -167,6 +167,14 @@ repos:
         types: [python]
         files: ansible_collections/arista/avd/plugins/filter/
 
+      - id: docs-plugin-lookup
+        name: Build documentation for collection lookup plugins
+        entry: ansible-doc-extractor --template ansible_collections/arista/avd/docs/templates/plugin-docs.j2 --markdown "ansible_collections/arista/avd/docs/plugins/Lookup_plugins/"
+        language: system
+        types: [python]
+        files: ansible_collections/arista/avd/plugins/lookup/
+
+
       - id: docs-plugin-test
         name: Build documentation for collection test plugins
         entry: ansible-doc-extractor --template ansible_collections/arista/avd/docs/templates/plugin-docs.j2 --markdown "ansible_collections/arista/avd/docs/plugins/Test_plugins/"
