issue-3820: updated the custom field

--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-leaf1a-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-leaf1a-catalog.yml
@@ -502,7 +502,7 @@ anta.tests.routing.bgp:
       peers:
       - 10.1.1.1
     result_overwrite:
-      custom_field: 'BGP EVPN Peer: (IP: 10.1.1.1)'
+      custom_field: 'BGP EVPN Peer: 10.1.1.1'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
