--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/structured_configs/dc1-wan1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/structured_configs/dc1-wan1.yml
@@ -45,13 +45,21 @@ router_bgp:
     route_map: RM-CONN-2-BGP
   neighbors:
   - ip_address: 10.255.255.0
-    peer_group: WAN-OVERLAY-PEERS
+    peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65101'
     peer: dc1-leaf1a
-    description: dc1-leaf1a
+    description: dc1-leaf1a_Ethernet6
   - ip_address: 10.255.255.2
-    peer_group: WAN-OVERLAY-PEERS
+    peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65101'
+    peer: dc1-leaf1b
+    description: dc1-leaf1b_Ethernet6
+  - ip_address: 10.255.255.10
+    peer_group: WAN-OVERLAY-PEERS
+    peer: dc1-leaf1a
+    description: dc1-leaf1a
+  - ip_address: 10.255.255.20
+    peer_group: WAN-OVERLAY-PEERS
     peer: dc1-leaf1b
     description: dc1-leaf1b
   address_family_evpn:
@@ -389,11 +397,11 @@ router_path_selection:
     dynamic_peers:
       enabled: true
     static_peers:
-    - router_ip: 10.255.255.0
+    - router_ip: 10.255.255.10
       name: dc1-leaf1a
       ipv4_addresses:
       - 172.18.1.2
-    - router_ip: 10.255.255.2
+    - router_ip: 10.255.255.20
       name: dc1-leaf1b
       ipv4_addresses:
       - 172.18.2.2
@@ -409,11 +417,11 @@ router_path_selection:
     dynamic_peers:
       enabled: true
     static_peers:
-    - router_ip: 10.255.255.0
+    - router_ip: 10.255.255.10
       name: dc1-leaf1a
       ipv4_addresses:
       - 100.64.1.2
-    - router_ip: 10.255.255.2
+    - router_ip: 10.255.255.20
       name: dc1-leaf1b
       ipv4_addresses:
       - 100.64.2.2
@@ -472,8 +480,8 @@ application_traffic_recognition:
     ipv4_prefixes:
     - name: PFX-PATHFINDERS
       prefix_values:
-      - 10.255.255.0/32
-      - 10.255.255.2/32
+      - 10.255.255.10/32
+      - 10.255.255.20/32
 dps_interfaces:
 - name: Dps1
   description: DPS Interface
@@ -543,6 +551,6 @@ metadata:
       circuit_id: DC1-INET-3
       pathgroup: internet
     pathfinders:
-    - vtep_ip: 10.255.255.0
-    - vtep_ip: 10.255.255.2
+    - vtep_ip: 10.255.255.10
+    - vtep_ip: 10.255.255.20
 dns_domain: dc1.local
