--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_virtual_topology.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_virtual_topology.schema.yml
@@ -61,3 +61,13 @@ $defs:
                 "alternate" is converted to priority 2.
 
                 If not set, each path-group in `names` will be attributed its `default_preference`.
+      internet_exit:
+        type: dict
+        keys:
+          policy:
+            type: str
+            description: |-
+              PREVIEW: This key is in preview mode.
+
+              Internet-exit policy name associated with this virtual_topology.
+              The policy must be defined under `cv_pathfinder_internet_exit_policies`.
