--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/flow-tracking-tests-leaf2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/flow-tracking-tests-leaf2.cfg
@@ -21,6 +21,7 @@ flow tracking sampled
          collector 127.0.2.1
          local interface Loopback0
          template interval 40020
+   no shutdown
 !
 transceiver qsfp default-mode 4x10G
 !
@@ -77,7 +78,7 @@ interface Ethernet12
    switchport
    flow tracker sampled FLOW-TRACKER-3
 !
-interface Ethernet14
+interface Ethernet13
    description single-interface-true4_eth1
    no shutdown
    switchport access vlan 11
