--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/autovpn-rr2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/autovpn-rr2.yml
@@ -285,3 +285,4 @@ flow_tracking:
           host: 127.0.0.1
         local_interface: Loopback0
         template_interval: 3600000
+    shutdown: false
