--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge.yml
@@ -788,6 +788,7 @@ flow_tracking:
           host: 127.0.0.1
         local_interface: Loopback0
         template_interval: 3600000
+    shutdown: false
 metadata:
   cv_tags:
     device_tags:
