--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/flow-tracking-tests-l2-leaf2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/flow-tracking-tests-l2-leaf2.cfg
@@ -11,6 +11,7 @@ flow tracking sampled
          collector 127.0.0.1
          local interface Loopback0
          template interval 3600000
+   no shutdown
 !
 transceiver qsfp default-mode 4x10G
 !
