--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/flow-tracking-tests-leaf1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/flow-tracking-tests-leaf1.cfg
@@ -17,6 +17,7 @@ flow tracking hardware
          collector 127.0.0.1
          local interface Loopback0
          template interval 40000
+   no shutdown
 !
 transceiver qsfp default-mode 4x10G
 !
@@ -76,7 +77,7 @@ interface Ethernet12
    switchport
    flow tracker hardware FLOW-TRACKER
 !
-interface Ethernet14
+interface Ethernet13
    description single-interface-true4_eth1
    no shutdown
    switchport access vlan 11
