--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/autovpn-rr1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/autovpn-rr1.yml
@@ -283,3 +283,4 @@ flow_tracking:
           host: 127.0.0.1
         local_interface: Loopback0
         template_interval: 3600000
+    shutdown: false
