--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/flow-tracking-tests-l2-leaf2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/flow-tracking-tests-l2-leaf2.yml
@@ -87,5 +87,6 @@ flow_tracking:
           host: 127.0.0.1
         local_interface: Loopback0
         template_interval: 3600000
+    shutdown: false
 metadata:
   platform: vEOS-lab
