--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/flow-tracking-tests-leaf1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/flow-tracking-tests-leaf1.yml
@@ -197,7 +197,7 @@ ethernet_interfaces:
   vlans: '11'
   flow_tracker:
     hardware: FLOW-TRACKER
-- name: Ethernet14
+- name: Ethernet13
   peer: single-interface-true4
   peer_interface: eth1
   peer_type: server
@@ -285,5 +285,6 @@ flow_tracking:
           host: 127.0.0.1
         local_interface: Loopback0
         template_interval: 40000
+    shutdown: false
 metadata:
   platform: vEOS-lab
