--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/FLOW_TRACKING_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/FLOW_TRACKING_TESTS.yml
@@ -1,6 +1,35 @@
 ---
 # Common AVD group variables
 
+
+# Test combination of flow tracking inputs across the FLOW_TRACKING_TESTS nodes.
+# There are total of 8 nodes:
+# spine1, spine2, leaf1, leaf2, leaf3 ( mlag ), leaf4 ( mlag ), l2-leaf1, l2-leaf2
+
+# For l3_edge, core_interfaces:
+# spine1 has flow tracking enabled by default, tracker type : default( sampled )
+# spine2 has flow tracking disabled by default, tracker type : hardware, tracker name is also non-default in fabric settings
+
+# We configure the combination of inputs for l3_interfaces, core_interfaces
+# default setting, enabled: off, enabled: on, enabled:on override flow tracker name
+
+# We also test downlinks which come from the leaf[1-4] on the spine nodes, spine 1 downlinks should
+# have default flow tracker, whereas spine 2 downlinks should have custom flow tracker ( overriden in global settings ).
+
+# Default Flow Tracker definition is also overriden in spine1. Extra trackers are provided in spine2 to check filtering
+
+# Similarly for leafs:
+# leaf1: has tracking enabled by default, leaf2: has tracking disabled by default
+# and we configure their endpoints with varying configuration as before.
+# leaf1, leaf2 are used for testing: uplinks, l3_interfaces (tenants), endpoints
+
+# leaf3, leaf4 are used for testing: mlag_interfaces, uplinks( with overriden name in fabric setting ), downlinks
+
+# l2-leaf1, l2-leaf2 are used for testing l2 ports uplinks i.e port-channels
+
+# node l3_interfaces are tested in CV_PATHFINDER_TESTS
+
+
 fabric_name: FLOW_TRACKING_TESTS
 
 mgmt_gateway: 192.168.0.1
