Feat(eos_designs): IPv4/IPv6 address-family configuration for bgp_peer_groups defined under network services.

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL2A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL2A.cfg
@@ -316,6 +316,8 @@ router bgp 65106
       address-family ipv4
          neighbor 2.2.2.2 activate
          neighbor 2.2.2.3 activate
+      !
+      address-family ipv6
 !
 management api http-commands
    protocol https
