--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/evpn_services_l2_only_false.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/evpn_services_l2_only_false.cfg
@@ -561,7 +561,18 @@ router bgp 101
    !
    address-family ipv4
       no neighbor EVPN-OVERLAY-PEERS activate
+      neighbor Tenant_C_AFIPv4_PG_1 activate
+      neighbor Tenant_C_AFIPv4_PG_2 prefix-list PL_In_Test_1 in
+      neighbor Tenant_C_AFIPv4_PG_2 prefix-list PL_Out_Test_1 out
+      neighbor Tenant_C_AFIPv4_PG_2 activate
+      neighbor Tenant_C_AFIPv4_PG_3 route-map TEST_IN in
+      neighbor Tenant_C_AFIPv4_PG_3 route-map TEST_OUT out
+      neighbor Tenant_C_AFIPv4_PG_3 activate
       neighbor UNDERLAY-PEERS activate
+   !
+   address-family ipv6
+      neighbor Tenant_C_AFPv6_PG_1 activate
+      no neighbor Tenant_C_AFPv6_PG_2 activate
    !
    vrf 12345678
       rd 192.168.255.109:41
@@ -634,6 +645,10 @@ router bgp 101
       route-target export evpn 31:31
       router-id 192.168.255.109
       redistribute connected
+      !
+      address-family ipv4
+      !
+      address-family ipv6
    !
    vrf Tenant_D_OP_Zone
       rd 192.168.255.109:40
