--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-BL2B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-BL2B.yml
@@ -60,6 +60,16 @@ router_bgp:
       activate: false
     - name: IPVPN-INTERWORKING-PEERS
       activate: false
+    - name: Tenant_C_AFIPv4_PG_1
+      activate: true
+    - name: Tenant_C_AFIPv4_PG_2
+      activate: true
+      prefix_list_in: PL_In_Test_1
+      prefix_list_out: PL_Out_Test_1
+    - name: Tenant_C_AFIPv4_PG_3
+      activate: true
+      route_map_in: TEST_IN
+      route_map_out: TEST_OUT
   redistribute_routes:
   - source_protocol: connected
     route_map: RM-CONN-2-BGP
@@ -248,6 +258,12 @@ router_bgp:
     redistribute_routes:
     - learned
     vlan: '350'
+  address_family_ipv6:
+    peer_groups:
+    - name: Tenant_C_AFPv6_PG_1
+      activate: true
+    - name: Tenant_C_AFPv6_PG_2
+      activate: false
 static_routes:
 - vrf: MGMT
   destination_address_prefix: 0.0.0.0/0
