--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1_UNDEPLOYED_LEAF1A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1_UNDEPLOYED_LEAF1A.yml
@@ -44,6 +44,16 @@ router_bgp:
       activate: true
     - name: EVPN-OVERLAY-PEERS
       activate: false
+    - name: Tenant_C_AFIPv4_PG_1
+      activate: true
+    - name: Tenant_C_AFIPv4_PG_2
+      activate: true
+      prefix_list_in: PL_In_Test_1
+      prefix_list_out: PL_Out_Test_1
+    - name: Tenant_C_AFIPv4_PG_3
+      activate: true
+      route_map_in: TEST_IN
+      route_map_out: TEST_OUT
   neighbors:
   - ip_address: 10.255.251.25
     peer_group: MLAG-PEERS
@@ -277,6 +287,18 @@ router_bgp:
     neighbors:
     - ip_address: 10.255.251.25
       peer_group: MLAG-PEERS
+    address_family_ipv4:
+      peer_groups:
+      - name: VRF_Tenant_C_AFIPv4_PG_1
+        activate: true
+      - name: VRF_Tenant_C_AFIPv4_PG_2
+        activate: false
+    address_family_ipv6:
+      peer_groups:
+      - name: VRF_Tenant_C_AFIPv6_PG_1
+        activate: true
+      - name: VRF_Tenant_C_AFIPv6_PG_2
+        activate: false
     updates:
       wait_install: true
   vlan_aware_bundles:
@@ -370,6 +392,12 @@ router_bgp:
     redistribute_routes:
     - learned
     vlan: '350'
+  address_family_ipv6:
+    peer_groups:
+    - name: Tenant_C_AFPv6_PG_1
+      activate: true
+    - name: Tenant_C_AFPv6_PG_2
+      activate: false
 static_routes:
 - vrf: MGMT
   destination_address_prefix: 0.0.0.0/0
