Feat(eos_designs): Add sample rate to sflow settings in eos_designs

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/sflow-tests-l2-leaf1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/sflow-tests-l2-leaf1.cfg
@@ -8,6 +8,7 @@ service routing protocols model multi-agent
 !
 hostname sflow-tests-l2-leaf1
 !
+sflow sample 10
 sflow vrf MGMT destination 10.10.10.12
 sflow vrf MGMT source-interface Management1
 sflow destination 10.10.10.10
