--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/sflow-tests-l2-leaf1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/sflow-tests-l2-leaf1.yml
@@ -75,6 +75,7 @@ vlan_interfaces:
   type: inband_mgmt
 sflow:
   run: true
+  sample: 10
   destinations:
   - destination: 10.10.10.10
   - destination: 10.10.10.11
