--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -3263,6 +3263,13 @@ keys:
       For default enabling of sFlow for various interface types across the fabric
       see `fabric_sflow`.'
     keys:
+      sample:
+        type: int
+        convert_types:
+        - str
+        min: 1
+        max: 4294967295
+        description: Sample rate.
       destinations:
         type: list
         items:
