--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/SFLOW_TESTS_L2_LEAFS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/SFLOW_TESTS_L2_LEAFS.yml
@@ -4,6 +4,7 @@ type: l2leaf
 default_mgmt_method: inband
 
 sflow_settings:
+  sample: 10
   destinations:
     - destination: 10.10.10.10
       vrf: use_inband_mgmt_vrf
