Adding description for multicast

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -11010,7 +11010,9 @@ keys:
                   type: str
                 rcf:
                   type: str
-                  description: RCF function name without parenthesis.
+                  description: 'RCF function name without parenthesis.
+
+                    Only used if `source_protocol` is `isis`.'
       address_family_ipv4_sr_te:
         type: dict
         keys:
@@ -11211,7 +11213,9 @@ keys:
                   type: bool
                 rcf:
                   type: str
-                  description: RCF function name without parenthesis.
+                  description: 'RCF function name without parenthesis.
+
+                    Only used if `source_protocol` is `isis`.'
       address_family_ipv6_sr_te:
         type: dict
         keys:
