--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_multicast.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_multicast.schema.yml
@@ -12,6 +12,13 @@ keys:
       ipv4:
         type: dict
         keys:
+          activity_polling_interval:
+            type: int
+            convert_types:
+              - str
+            min: 1
+            max: 60
+            description: MFIB entry activity polling interval.
           counters:
             type: dict
             keys:
@@ -59,6 +66,16 @@ keys:
                             max: 255
                             convert_types:
                               - str
+      ipv6:
+        type: dict
+        keys:
+          activity_polling_interval:
+            type: int
+            convert_types:
+              - str
+            min: 1
+            max: 60
+            description: MFIB entry activity polling interval.
       vrfs:
         type: list
         primary_key: name
