--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
@@ -775,9 +775,9 @@ $defs:
           mlag_peer_ipv6_pool:
             documentation_options:
               table: node-type-l2-mlag-configuration
-            description: |
+            description: |-
               IPv6 address pool used for MLAG Peer Link (control link). IP is derived from the node id.
-              Required when MLAG leafs present in topology.
+              Required for MLAG leafs when `mlag_peer_address_family` is `ipv6`.
             type: str
           mlag_port_channel_id:
             documentation_options:
